--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task case</title>
+    <title>Task case - Notus</title>
+    <meta
+      name="description"
+      content="Notus task case - mehmeyigityalim tarafından hazırlandı."
+    />
+    <meta name="author" content="mehmeyigityalim" />
+    <meta name="keywords" content="notus, task, case, mehmeyigityalim" />
   </head>
   <body>
     <div id="root"></div>
